# conformal_mip

./: .gitignore  README.md  environment.yml  pyproject.toml
cmippy/: add_cols.py  cb.py  config.py  cp.py  data.py  get_problem_representations.py  loss.py  models.py  train.py  utils.py
cmippy/configs/: CFLP-medium.yaml  CFLP-toy.yaml  GISP-easy.yaml  MIS-medium.yaml  MMCN-medium-BI.yaml  MVC-medium.yaml  OTS-medium.yaml  cflp-medium.yaml  gisp-easy.yaml  mis-medium.yaml  mmcn-medium-bi.yaml  mvc-medium.yaml  ots-medium.yaml
cmippy/copt/: evaluate_predictor.py  optmodel.py
cmippy/gurobi/: evaluate_predictor.py  optmodel.py
instances/CFLP-toy/: CFLP-license.txt  CFLP-reference-info.txt
scripts/: fix_lp_files.py  make_run_plots.py  test.py  train.py
scripts/bash/: all_datasets.bash  data.bash  data_copt.bash  data_ecole.bash  data_scip.bash  full_data.bash  generate_train_data.bash  make_plots.bash  plot.bash  run_all_ecole_experiments.bash  run_all_ecole_tests.bash  run_all_gurobi_experiments.bash  run_all_gurobi_tests.bash  test.bash  test_ecole.bash  train.bash  train_copt.bash  train_ecole.bash
