[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["loco"]
exclude = []

[tool.hatch.build.targets.sdist]
include = ["..."]

[tool.hatch.version]
source = "vcs"

[project]
name = "cmippy"
description = "Code for the paper "Conformal Prediction for Early Stopping in Mixed Integer Optimization"
readme = "README.md"
license = { text = "Commons Clause License Condition v1.0" }
dynamic = ["version"]
authors = [
    { name = "ANONYMIZED FOR REVIEW", email = "" },
    { name = "ANONYMIZED FOR REVIEW", email = "" },
]
dependencies = [
]

[project.optional-dependencies]
dev = [
]

[tool.ruff]
exclude = ["build", "examples", "instances", "docs", "*__init__.py"]
line-length = 100
target-version = "py310"

[rool.ruff.lint]
select = ["E", "F", "I"]

[tool.isort]
skip = ["__init__.py"]
