[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cmippy"]
exclude = []

[tool.hatch.build.targets.sdist]
include = ["..."]

[tool.hatch.version]
source = "vcs"

[project]
name = "cmippy"
description = "Code for the paper Conformal Prediction for Early Stopping in Mixed Integer Optimization"
readme = "README.md"
license = { text = "Commons Clause License Condition v1.0" }
dynamic = ["version"]
authors = [
    { name = "ANONYMIZED FOR REVIEW", email = "" },
    { name = "ANONYMIZED FOR REVIEW", email = "" },
]
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "tqdm",
    "tqdm-joblib",
    "matplotlib",
    "joblib",
    "mlflow>=3.8.0",
    "hydra-core",
    "pandas",
    "gurobipy>=10.0",
]

[project.optional-dependencies]
dev = [
]

copt = [
    "coptpy>=8.0.3"
]

[tool.ruff]
exclude = ["build", "examples", "instances", "docs", "*__init__.py"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.isort]
skip = ["__init__.py"]
